# Blob-Sync

./: .env  .gitignore  README.md
blob-sync/: .gitignore  Cargo.toml  docker-compose.yml  init.sql
blob-sync/src/: db.rs  main.rs
