[package]
name = "blob-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core storage abstraction
object_store = { version = "0.11", features = ["aws"] }

# Runtime and async
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"

# Progress bars
indicatif = "0.17"

# Logging
env_logger = "0.10"

# File system operations
walkdir = "2"

# Path handling
path-clean = "1"

# Environment variables
dotenv = "0.15"

# Random data generation
rand = "0.8"

# Checksum
sha2 = "0.10"
hex = "0.4"

# Streaming
bytes = "1"
futures = "0.3"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Date parsing
chrono = "0.4"

# Postgres
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }

# GeoTIFF CRS extraction
tiff = "0.9"

[[bin]]
name = "generate_test_data"
path = "src/bin/generate_test_data.rs"
